--- a/config.toml
+++ b/config.toml
@@ -14,3 +14,5 @@ home = [ "HTML", "RSS", "JSON"]
   disableSearch = false
   disableBreadcrumb = false
   themeVariant = "blue"
+  disableLandingPageButton = true
+
