Use latest content and configure lab1

--- a/config.toml
+++ b/config.toml
@@ -16,4 +16,5 @@ home = [ "HTML", "RSS", "JSON"]
   themeVariant = "blue"
   disableLandingPageButton = true
   disableNextPrev = true
+  labOne = "prezentare_mmicu_01.pdf"
 
